[gd_scene load_steps=15 format=3 uid="uid://uxa0ckuxu2u0"]

[ext_resource type="Texture2D" uid="uid://hwrbl0asp1f" path="res://graphics/background.jpg" id="1_8smxy"]
[ext_resource type="Script" path="res://scenes/level.gd" id="1_mv8ww"]
[ext_resource type="PackedScene" uid="uid://dfioxtkbwgdie" path="res://scenes/player.tscn" id="2_p144a"]
[ext_resource type="PackedScene" uid="uid://d2prs1weygqy5" path="res://scenes/enemy.tscn" id="3_4arf8"]
[ext_resource type="PackedScene" uid="uid://cswg0rgdgoj" path="res://scenes/obstacle.tscn" id="3_u61b1"]

[sub_resource type="LabelSettings" id="LabelSettings_8vc1h"]
font_size = 18
outline_size = 2
outline_color = Color(1, 0.243137, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tfqoh"]
font_size = 18
outline_size = 2
outline_color = Color(1, 0.278431, 1, 1)

[sub_resource type="GDScript" id="GDScript_cvvsm"]
script/source = "extends Node2D
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3c36l"]
size = Vector2(120, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2g7g"]
size = Vector2(1421, 120)

[sub_resource type="LabelSettings" id="LabelSettings_72pim"]
font_size = 100
outline_size = 10
outline_color = Color(1, 0.270588, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cmyk8"]
font_size = 21
outline_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_psnix"]
font_size = 70
outline_size = 5
outline_color = Color(1, 0.137255, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uefvv"]
font_size = 41
outline_size = 5
outline_color = Color(1, 0.25098, 1, 1)

[node name="Level" type="Node2D"]

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(247, 112)
scale = Vector2(2.2525, 2.05)
texture = ExtResource("1_8smxy")
offset = Vector2(177.58, 124.39)

[node name="LivesLabel" type="Label" parent="."]
offset_left = 1110.0
offset_top = 42.0
offset_right = 1208.0
offset_bottom = 68.0
text = "Lives left: 2"
label_settings = SubResource("LabelSettings_8vc1h")
horizontal_alignment = 2

[node name="ScoresLabel" type="Label" parent="."]
offset_left = 58.0
offset_top = 42.0
offset_right = 182.0
offset_bottom = 68.0
text = "Balls scored: 0"
label_settings = SubResource("LabelSettings_tfqoh")

[node name="Balls" type="Node2D" parent="."]

[node name="BallTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true
script = ExtResource("1_mv8ww")

[node name="Borders" type="Node2D" parent="."]
script = SubResource("GDScript_cvvsm")

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(1300, 361)
shape = SubResource("RectangleShape2D_3c36l")

[node name="StaticBody2D2" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D2"]
position = Vector2(-22, 360)
shape = SubResource("RectangleShape2D_3c36l")

[node name="StaticBody2D3" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D3"]
position = Vector2(638, -25)
shape = SubResource("RectangleShape2D_x2g7g")

[node name="StaticBody2D4" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D4"]
position = Vector2(650, 743)
shape = SubResource("RectangleShape2D_x2g7g")

[node name="Obstacles" type="Node2D" parent="."]

[node name="Obstacle32" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1257, 54)
rotation = -1.5708

[node name="Obstacle33" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1259, 111)
rotation = -1.5708

[node name="Obstacle34" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1259, 169)
rotation = -1.5708

[node name="Obstacle35" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1261, 226)
rotation = -1.5708

[node name="Obstacle36" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1258, 284)
rotation = -1.5708

[node name="Obstacle37" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1260, 341)
rotation = -1.5708

[node name="Obstacle38" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1260, 399)
rotation = -1.5708

[node name="Obstacle39" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1262, 456)
rotation = -1.5708

[node name="Obstacle40" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1256, 509)
rotation = -1.5708

[node name="Obstacle41" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1258, 566)
rotation = -1.5708

[node name="Obstacle42" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1258, 624)
rotation = -1.5708

[node name="Obstacle64" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1258, 678)
rotation = -1.5708

[node name="Obstacle43" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(42, 20)
rotation = 3.12938

[node name="Obstacle44" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(101, 20)
rotation = 3.12938

[node name="Obstacle45" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(160, 20)
rotation = 3.12938

[node name="Obstacle46" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(219, 20)
rotation = 3.12938

[node name="Obstacle47" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(278, 20)
rotation = 3.12938

[node name="Obstacle48" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(338, 20)
rotation = 3.12938

[node name="Obstacle49" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(397, 20)
rotation = 3.12938

[node name="Obstacle50" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(458, 20)
rotation = 3.12938

[node name="Obstacle51" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(517, 20)
rotation = 3.12938

[node name="Obstacle52" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(576, 20)
rotation = 3.12938

[node name="Obstacle53" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(635, 20)
rotation = 3.12938

[node name="Obstacle54" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(694, 20)
rotation = 3.12938

[node name="Obstacle55" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(753, 20)
rotation = 3.12938

[node name="Obstacle56" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(812, 20)
rotation = 3.12938

[node name="Obstacle57" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(872, 20)
rotation = 3.12938

[node name="Obstacle58" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(931, 20)
rotation = 3.12938

[node name="Obstacle59" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(992, 20)
rotation = 3.12938

[node name="Obstacle60" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1051, 20)
rotation = 3.12938

[node name="Obstacle61" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1110, 20)
rotation = 3.12938

[node name="Obstacle62" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1171, 20)
rotation = 3.12938

[node name="Obstacle63" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1230, 20)
rotation = 3.12938

[node name="Obstacle" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(48, 700)

[node name="Obstacle2" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(107, 700)

[node name="Obstacle3" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(166, 700)

[node name="Obstacle4" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(225, 700)

[node name="Obstacle5" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(284, 700)

[node name="Obstacle6" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(344, 700)

[node name="Obstacle7" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(403, 700)

[node name="Obstacle8" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(464, 700)

[node name="Obstacle9" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(523, 700)

[node name="Obstacle10" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(582, 700)

[node name="Obstacle11" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(641, 700)

[node name="Obstacle12" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(700, 700)

[node name="Obstacle13" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(759, 700)

[node name="Obstacle14" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(818, 700)

[node name="Obstacle15" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(878, 700)

[node name="Obstacle16" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(937, 700)

[node name="Obstacle17" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(998, 700)

[node name="Obstacle18" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1057, 700)

[node name="Obstacle19" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1116, 700)

[node name="Obstacle20" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1177, 700)

[node name="Obstacle21" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1236, 700)

[node name="Obstacle65" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 46)
rotation = 1.5708

[node name="Obstacle66" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 103)
rotation = 1.5708

[node name="Obstacle67" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 161)
rotation = 1.5708

[node name="Obstacle68" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 218)
rotation = 1.5708

[node name="Obstacle69" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 276)
rotation = 1.5708

[node name="Obstacle70" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 333)
rotation = 1.5708

[node name="Obstacle71" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 391)
rotation = 1.5708

[node name="Obstacle72" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 448)
rotation = 1.5708

[node name="Obstacle73" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 501)
rotation = 1.5708

[node name="Obstacle74" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 558)
rotation = 1.5708

[node name="Obstacle75" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 616)
rotation = 1.5708

[node name="Obstacle76" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(20, 670)
rotation = 1.5708

[node name="Obstacle22" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(182, 177)
rotation = 3.14159

[node name="Obstacle23" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(240, 178)
rotation = 3.14159

[node name="Obstacle24" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(296, 177)
rotation = 3.14159

[node name="Obstacle25" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(354, 178)
rotation = 3.14159

[node name="Obstacle26" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(947, 538)

[node name="Obstacle27" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1005, 539)

[node name="Obstacle28" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1061, 538)

[node name="Obstacle30" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(775, 191)
rotation = 3.14159

[node name="Obstacle31" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(833, 192)
rotation = 3.14159

[node name="Obstacle77" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(889, 191)
rotation = 3.14159

[node name="Obstacle78" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(947, 192)
rotation = 3.14159

[node name="Obstacle79" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(960, 380)
rotation = 3.14159

[node name="Obstacle80" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1018, 381)
rotation = 3.14159

[node name="Obstacle81" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1074, 380)
rotation = 3.14159

[node name="Obstacle82" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1132, 381)
rotation = 3.14159

[node name="Obstacle83" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(267, 337)
rotation = 3.14159

[node name="Obstacle84" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(325, 338)
rotation = 3.14159

[node name="Obstacle85" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(381, 337)
rotation = 3.14159

[node name="Obstacle86" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(439, 338)
rotation = 3.14159

[node name="Obstacle87" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(494, 338)
rotation = 3.14159

[node name="Obstacle88" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(552, 339)
rotation = 3.14159

[node name="Obstacle89" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(608, 338)
rotation = 3.14159

[node name="Obstacle90" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(666, 339)
rotation = 3.14159

[node name="Obstacle91" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(222, 343)
rotation = -1.5708

[node name="Obstacle92" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(224, 400)
rotation = -1.5708

[node name="Obstacle93" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(224, 458)
rotation = -1.5708

[node name="Obstacle95" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(389, 358)
rotation = 1.5708

[node name="Obstacle96" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(389, 415)
rotation = 1.5708

[node name="Obstacle97" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(389, 473)
rotation = 1.5708

[node name="Obstacle98" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(389, 530)
rotation = 1.5708

[node name="Obstacle99" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(890, 343)

[node name="Obstacle100" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(948, 344)

[node name="Obstacle101" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1004, 343)

[node name="Obstacle102" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1062, 344)

[node name="Obstacle103" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(716, 538)

[node name="Obstacle104" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(774, 539)

[node name="Obstacle105" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(830, 538)

[node name="Obstacle106" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(888, 539)

[node name="Obstacle107" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(602, 536)

[node name="Obstacle108" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(660, 537)

[node name="Obstacle109" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1002, 192)
rotation = 3.14159

[node name="Obstacle111" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(315, 137)

[node name="Obstacle112" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(373, 138)

[node name="Obstacle113" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(429, 137)

[node name="Obstacle114" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(487, 138)

[node name="Obstacle115" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1053, 189)
rotation = 3.14159

[node name="Obstacle116" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1111, 190)
rotation = 3.14159

[node name="Obstacle117" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1153, 256)
rotation = 1.5708

[node name="Obstacle118" parent="Obstacles" instance=ExtResource("3_u61b1")]
position = Vector2(1155, 198)
rotation = 1.5708

[node name="Player" parent="." instance=ExtResource("2_p144a")]
position = Vector2(646, 217)
scale = Vector2(0.4, 0.4)

[node name="Enemy" parent="." instance=ExtResource("3_4arf8")]
position = Vector2(563, 96)
scale = Vector2(0.3, 0.3)

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 358.0
offset_top = 279.0
offset_right = 959.0
offset_bottom = 416.0
label_settings = SubResource("LabelSettings_72pim")
uppercase = true

[node name="RestartButton" type="Button" parent="."]
process_mode = 3
offset_left = 1135.0
offset_top = 624.0
offset_right = 1200.0
offset_bottom = 655.0
text = "Restart"

[node name="GoalLabel" type="Label" parent="."]
visible = false
offset_left = 82.0
offset_top = 614.0
offset_right = 1036.0
offset_bottom = 642.0
text = "Collect 10 balls without getting caught by Mourinho to win the championship! Think it's easy? Haha"
label_settings = SubResource("LabelSettings_cmyk8")

[node name="HatTrickLabel" type="Label" parent="."]
visible = false
offset_left = 486.0
offset_top = 305.0
offset_right = 831.0
offset_bottom = 401.0
text = "Hat-Trick! "
label_settings = SubResource("LabelSettings_psnix")

[node name="KingScorerLabel" type="Label" parent="."]
visible = false
offset_left = 270.0
offset_top = 226.0
offset_right = 980.0
offset_bottom = 283.0
text = "King Scorer! Dzeko has a gift for you"
label_settings = SubResource("LabelSettings_uefvv")

[node name="AudioManager" type="AudioManager" parent="."]

[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="timeout" from="BallTimer" to="BallTimer" method="_on_timeout"]
[connection signal="pressed" from="RestartButton" to="BallTimer" method="_on_restart_button_pressed"]
